# decf

./: .appveyor.yml  .gitmodules  CMakeLists.txt  README.md
include/dumb_ecf/: registry.hpp  types.hpp
include/dumb_ecf/detail/: locker.hpp  storage.hpp
src/: registry.cpp
